--- a/form/index.html
+++ b/form/index.html
@@ -69,7 +69,7 @@
                     </p>
                     <p>
                         <label>Asunto</label>
-                        <input type="text" autocomplete="off" minlength="1" maxlength="50"  name="affair">
+                        <input type="text" autocomplete="off" minlength="1" required maxlength="50"  name="affair">
                     </p>
                     <p class="block">
                         <label>Mensaje</label>
